--- a/citation.bib
+++ b/citation.bib
@@ -1,8 +1,9 @@
-@misc{qompassai_license,
+@software{license,
   author       = {Porter, Matthew A.},
-  title        = {Qompass AI License},
+  title        = {license},
   year         = {2025},
-  note         = {Version 2025-05-02. Not yet indexed by Zenodo.},
-  howpublished = {\url{https://github.com/qompassai/license}},
-  organization = {Qompass AI}
+  license      = {Q-CDA-1.0},
+  publisher    = {Zenodo},
+  version      = {a27674e},
+  url          = {https://github.com/qompassai/license}
 }
